Adding a script to test fast conditional breakpoints in GDB.

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
---- Varia Repository ---
+--- Varia ---
 
-Repository for various small project/ideas I have started and possibly completed.
+This repository contains various scripts used for personnal projects or for work project such as benchmarking GDB.
